--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -223,362 +223,52 @@ OSD)</li>
 <li>Tuner menu option fix.</li>
 </ul>
 
-<p>Version 2.1.1&#151;<b>Superseded</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV211exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV211src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]</p>
-
-<ul>
-<li>Preliminary judder fix</li>
-
-<li>Steve's new 2-Frame Deinterlacing algorithm</li>
-
-<li>Tom's new Greedy Deinterlacing algorithm (this is low CPU, it
-is greedy because it eats one field)</li>
-
-<li>Steve's new Temporal Noise Filter (to switch on/off press
-n)</li>
-
-<li>Better PAL 2:2 pulldown detection (It's still not perfect
-though)</li>
-
-<li>Pixel width selection for game console support</li>
-
-<li>Window Position selection for use with aspect ratio
-controls</li>
-
-<li>Snapshots now in TIFF format</li>
-
-<li>Should start correctly from a shortcut</li>
-
-<li>Many code optimizations for SSE and 3DNOW! processors</li>
-
-<li>Adaptive deinterlace now separate method</li>
-
-<li>Scaler bob deinterlacing method</li>
-
-<li>Extensive card and audio recognition improvements from
-Mike</li>
-
-<li>Extensive reworking of parameters and defaults.</li>
-
-<li>Audio start/stop/save/restore on entry</li>
-
-<li>The ability to have multiple named .ini files.</li>
-
-<li>Adv Video Flags now saved and specified in ini file</li>
-
-<li>Deinterlace mode and many other status items now kept in ini
-file.</li>
-</ul>
-
-<p>Version 2.0.2&#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV202exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV202src.zip">Source
-Zipped</a>]</p>
-
-<ul>
-<li>Bug fixed - Windows 2000 driver code was broken.  No other
-binary changes.</li>
-
-<li>Deleted unused temporary files from 2.0.2 source, so source
-zip is smaller than 2.0.1 </li>
-</ul>
-
-<p>Version 2.0.1&#151;<b>Superseded</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV201exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV201src.zip">Source
-Zipped</a>]</p>
-
-<ul>
-<li>Numerous changes by Michael of Conexant Systems, Inc.</li>
-
-<li>Bug fixed - Occasional combing artifacts during
-commercials/music videos</li>
-
-<li>Bug fixed - Macrovision Purple Lines Fix! Adjustable via INI
-file.</li>
-
-<li>Onscreen Display Support</li>
-
-<li>Better Channel Search Support</li>
-
-<li>Better Channel List Functionality </li>
-
-<li>New optional blended deinterlace algorithm</li>
-</ul>
-
-<p>Version 2.0.0&#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV200exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV200src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme200.htm">README</a>]</p>
-
-<ul>
-<li>Bug fixed - Tearing is gone at all refresh rates!</li>
-
-<li>Bug fixed - Error message no longer pops up if you resize
-video window too small.</li>
-
-<li>Bug fixed - Video no longer becomes purple when resizing or
-maximizing.</li>
-
-<li>Better Automatic Aspect Ratio Detection defaults</li>
-
-<li>Smoother Synchronization</li>
-
-<li>Triple Buffering </li>
-
-<li>Added Option to Disable Startup Splash Screen</li>
-
-<li>Changed Keyboard Shortcuts; <a href="keyboard.htm">See
-List</a> 
-
-<ul>
-<li>New shortcuts added for video source and video format
-selection</li>
-
-<li>Some existing shortcuts modified for better intuition</li>
-</ul>
-</li>
-
-<li>New Video Deinterlace Algorithm - better for slow moving
-images, especially graphics displays.</li>
-
-<li>Old Video Deinterlace Algorithm - still available, better for
-fast motion.</li>
-
-<li>Automatic switching between three Video Deinterlace
-algorithms: 
-
-<ul>
-<li>Simple Weave during static images</li>
-
-<li>New Video Deinterlace during slow moving images</li>
-
-<li>Old Video Deinterlace during fast moving images</li>
-</ul>
-</li>
-</ul>
-
-<p>Version 1.9&#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV19exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV19src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme109.htm">README</a>]</p>
-
-<ul>
-<li>Automatic aspect ratio detection!</li>
-
-<li>Slightly less dropped frames on slower systems</li>
-
-<li>Debug logfile dTV.txt disabled by default</li>
-
-<li>Slightly better handling of poor pulldown material</li>
-
-<li>Minor simplifications to User Interface</li>
-
-<li>Better brightness/contrast/color defaults for NTSC (majority
-of users)</li>
-
-<li>Advanced Video Flags configuration dialog</li>
-</ul>
-
-<p>Version 1.8&#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV180exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV18src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme108.htm">README</a>]</p>
-
-<ul>
-<li>Aspect ratio control simplified and made more intuitive</li>
-
-<li>Easier hotkeys for common aspect ratios (4:3, letterbox,
-anamorphic)</li>
-
-<li>New "Deinterlace" menu under Settings menu</li>
-
-<li>Detection of poor pulldown for better NTSC movie-source
-deinterlacing, stays in video mode if too many rapid movie mode
-changes</li>
-
-<li>Detection and better deinterlacing of scene changes in
-certain NTSC movie material where 3:2 pulldown sequence
-changes</li>
-
-<li>Minor code cleanup</li>
-</ul>
-
-<p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV17exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV17src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme106.htm">README</a>]</p>
-
-<ul>
-<li>Integrated Michael's aspect ratio control code</li>
-
-<li>Many bits and pieces of source code cleanup for
-developers</li>
-
-<li>Improved the appearance of About screen, added more
-credits</li>
-
-<li>Documentation (.HTM files) moved into separate
-subdirectory</li>
-
-<li>Note: No TV tuner card related bugfixes over 1.6; see <a
-href="bugs/Bugs_107.htm">Known Bugs</a> for current list</li>
-</ul>
-
-<p>Version 1.6 Beta 4&#151;<b>Superseded</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV16b4.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV16src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme106.htm">README</a>]</p>
-
-<ul>
-<li>Auto detect enabled by default</li>
-
-<li>Video format (e.g., NTSC) automatically selected upon
-selection of tuner type (e.g., Philips NTSC) upon first
-install</li>
-
-<li>More reliable config defaults for 3/2 pulldown detection</li>
-
-<li>Changes to synchronization code</li>
-
-<li>Note: See <a href="bugs/Bugs_106b4.htm">Known Bugs</a> for
-additional details</li>
-</ul>
-
-<p>Version 1.5&#151;<b>Superseded</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV15exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV15src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme105.htm">README</a>]</p>
-
-<ul>
-<li>Auto 3:2 pulldown detect for NTSC</li>
-
-<li>Auto 2:2 pulldown detect for PAL (not very reliable needs
-some tweaking)</li>
-
-<li>Adaptive video deinterlacing</li>
-
-<li>Note: Teletext and CC broken</li>
-</ul>
-
-<p>Version 1.4&#151;<b>Superseded</b>&#151;[<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV14exe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV14src.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme104.htm">README</a>]</p>
-
-<ul>
-<li>Fix for overlays in low colour depths</li>
-
-<li>Still capture in ppm format</li>
-
-<li>Overscan support</li>
-</ul>
-
-<p>Version 1.3 &#151;<b>Superseded</b>&#151; [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTv13aexe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTV13asrc.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme103.htm">README</a>]</p>
-
-<ul>
-<li>Code clean up</li>
-
-<li>Better card support</li>
-
-<li>Sound bugs fixed</li>
-
-<li>Changed overlay colour</li>
-
-<li>Open Source video deinterlace version 1</li>
-</ul>
-
-<p>Version 1.2 &#151;<b>Superseded</b>&#151; [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTVex12.zip">Binary
-Zipped</a>] [<a href="readme/dTV_Readme102.htm">README</a>]</p>
-
-<ul>
-<li> Fix for flipping with bTV plug-ins</li>
-</ul>
-
-<p>Version 1.1 [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTVex11.zip">Binary
-Zipped</a>] [<a href="readme/dTV_Readme101.htm">README</a>]</p>
-
-<ul>
-<li>Support for bTV plugins added</li>
-
-<li>Full screen support</li>
-</ul>
-
-<p>Version 1.0 [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTVexe.zip">Binary
-Zipped</a>] [<a href=
-"http://prdownloads.sourceforge.net/deinterlace/dTVsrc.zip">Source
-Zipped</a>] [<a href="readme/dTV_Readme100.htm">README</a>]</p>
-
-<ul>
-<li>Original version--support for manual inverse telecine</li>
-</ul>
-
-<!-- #EndEditable --></td>
+<p>Version 2.1.1 &amp; before &#151;<b>Superceeded</b>&#151;</p>
+<p><a href="News.htm">See older news</a></p>
+
+<!-- #EndEditable --> 
+</td>
 </tr>
-
 <tr>
-<td colspan="3" height="21"> </td>
+<td colspan="3"> 
+</td>
 </tr>
-
 <tr bgcolor="#FFCC00">
-<td colspan="3" height="21">
+<td colspan="3">
 <div align="center"><img src="images/yellowspacer.gif" width=
 "100%" height="2"></div>
 </td>
 </tr>
-
 <tr>
-<td colspan="3" height="21"> </td>
+<td colspan="3"> </td>
 </tr>
-
 <tr>
-<td colspan="3" height="40">
-<div align="center"><a class="bottommenu" href=
-"index.php">home</a> | <a href="about.htm" class=
-"bottommenu">about</a> | <a href="/reviews/index.htm" class=
-"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
-"bottommenu">screenshots</a> | <a href="downloads.htm" class=
-"bottommenu">download</a> | <a href="Authors.htm" class=
-"bottommenu">authors</a> | <a href="Thanks.htm" class=
-"bottommenu">thanks</a> <a href="setup/index.htm" class=
-"bottommenu">setup</a> | <a href="keyboard.htm" class=
-"bottommenu">keyboard shortcuts</a> | <a href=
-"http://sourceforge.net/mail/?group_id=7420" class=
-"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
-"bottommenu">faq</a> | <a href="developers.htm" class=
-"bottommenu">developers</a> | <a href="Links.htm" class=
-"bottommenu">links</a></div>
+<td>
+</td>
+<td align="center">
+<a href="index.php" class="bottommenu">home</a>&nbsp;|&nbsp;<a href="about.htm" 
+class="bottommenu">about</a>&nbsp;|&nbsp;<a href="docs.htm" 
+class="bottommenu">documentation</a>&nbsp;|&nbsp;<a href="downloads.htm" 
+class="bottommenu">DScaler&nbsp;4</a>&nbsp;|&nbsp;<a href="Authors.htm" 
+class="bottommenu">authors</a><br><a href="Thanks.htm" 
+class="bottommenu">thanks</a>&nbsp;|&nbsp;<a href="user_support.htm" 
+class="bottommenu">user&nbsp;support</a>&nbsp;|&nbsp;<a href="donate.htm" 
+class="bottommenu">donate</a>&nbsp;|&nbsp;<a href="developers.htm" 
+class="bottommenu">developers</a>&nbsp;|&nbsp;<a href="Links.htm" 
+class="bottommenu">links</a>
+</td>
+<td align="right">
+<p>
+<a href="http://sourceforge.net/donate/index.php?group_id=7420">
+ <img src="http://images.sourceforge.net/images/project-support.jpg" 
+ width="88" height="32" border="0" alt="Support This Project" /> 
+</a><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" />
+</a></p>
 </td>
 </tr>
 </table>
+</body><!-- #EndTemplate -->
 
-<p><a href="http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
-"88" height="31" border="0" alt="SourceForge.net" align="right">
-</a></p>
-
-<p> </p>
-
-<!-- #EndTemplate -->
-</body>
 </html>
-
