--- a/htdocs/francais/FAQ.htm
+++ b/htdocs/francais/FAQ.htm
@@ -354,36 +354,49 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         list</a> de développement de DScaler. Toutes les informations sur la <a href="developers.htm">page 
         des d&eacute;veloppeurs</a>. 
       <p> 
-      <!-- #EndEditable --></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="../images/yellowspacer.gif" width="100%" height="2"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a href="../index.php" class="bottommenu">home</a> | <a href="../about.htm" class="bottommenu">about</a> 
-        | <a href="../reviews/index.htm" class="bottommenu">reviews</a> |&nbsp;<a href="../screenshots/index.htm" class="bottommenu">screenshots</a> 
-        | <a href="../downloads.htm" class="bottommenu">download</a> 
-        | <a href="../Authors.htm" class="bottommenu">authors</a> 
-        | <a href="../Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="../setup/index.htm" class="bottommenu">setup</a> | <a href="../keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="../FAQ.htm" class="bottommenu">faq</a> | <a href="../developers.htm" class="bottommenu">developers</a> 
-        | <a href="../Links.htm" class="bottommenu">links</a></div>
-    </td>
-  </tr>
+<!-- #EndEditable --> 
+</td>
+</tr>
+<tr>
+<td colspan="3"> 
+</td>
+</tr>
+<tr bgcolor="#FFCC00">
+<td colspan="3">
+<div align="center"><img src="images/yellowspacer.gif" width=
+"100%" height="2"></div>
+</td>
+</tr>
+<tr>
+<td colspan="3"> </td>
+</tr>
+<tr>
+<td>
+</td>
+<td align="center">
+<a href="index.php" class="bottommenu">home</a>&nbsp;|&nbsp;<a href="../about.htm" 
+class="bottommenu">about</a>&nbsp;|&nbsp;<a href="../docs.htm" 
+class="bottommenu">documentation</a>&nbsp;|&nbsp;<a href="../downloads.htm" 
+class="bottommenu">DScaler&nbsp;4</a>&nbsp;|&nbsp;<a href="../Authors.htm" 
+class="bottommenu">authors</a><br><a href="../Thanks.htm" 
+class="bottommenu">thanks</a>&nbsp;|&nbsp;<a href="../user_support.htm" 
+class="bottommenu">user&nbsp;support</a>&nbsp;|&nbsp;<a href="../donate.htm" 
+class="bottommenu">donate</a>&nbsp;|&nbsp;<a href="../developers.htm" 
+class="bottommenu">developers</a>&nbsp;|&nbsp;<a href="../Links.htm" 
+class="bottommenu">links</a>
+</td>
+<td align="right">
+<p>
+<a href="http://sourceforge.net/donate/index.php?group_id=7420">
+ <img src="http://images.sourceforge.net/images/project-support.jpg" 
+ width="88" height="32" border="0" alt="Support This Project" /> 
+</a><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" />
+</a></p>
+</td>
+</tr>
 </table>
-<p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=7420&type=1" border="0"
-alt="SourceForge.net" align="right"></a></p>
-<p>&nbsp; </p>
-</body>
-<!-- #EndTemplate -->
+</body><!-- #EndTemplate -->
+
 </html>
