--- a/htdocs/user_support.htm
+++ b/htdocs/user_support.htm
@@ -53,7 +53,7 @@ height="2"></td>
 
 <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Currently, user support is provided through the new <a href="phpBB/index.php">DScaler 
+      <p>User support is provided through the <a href="phpBB/index.php">DScaler 
         Support Forums</a>. Please do a <a href="phpBB/search.php">forum search</a> 
         for your particular question to ensure that it has not been asked and 
         answered already. If you believe that you have identified a previously 
@@ -79,70 +79,55 @@ target="_blank" href=
         <li>Closed Captions</li>
         <li>DScaler DirectShow Filter</li>
       </ul>
-      <p>Please do not report bugs or support questions in these areas to the 
-        forum.</p>
       <p>Additionally, there is the ongoing problem of sound support, please read 
         <a target="_blank" href=
 "http://www.dscaler.org/Help/index.php?helppage=SoundIssues.htm">this explanation 
         of Sound Issues</a> before posting issues relating to sound in the <a target="_blank" href=
 "http://www.avsforum.com/avs-vb/showthread.php?s=&postid=654909&t=7777#post654909"> 
         AVS Forum Sound Issues Thread</a>.</p>
-      <p>Support is given by the helpful members of the community, whether they 
-        be involved in this project or not. However, some people that may appear 
-        often to answer user questions and who are affiliated with project include:</p>
-      <p><u>User support<br>
-        </u>Dan Schmelzer (dschmelzer)<br>
-        Yvon Quere (Yvonus)<br>
-        Jason Castle (jcastle)<br>
-        (Slithy Tove)</p>
-      <p>Of course, most of your questions will be answered by the <a href="/htdocs/Authors.htm">DScaler 
-        developers</a>.</p>
-      <!-- #EndEditable --> </td>
+<!-- #EndEditable --> 
+</td>
 </tr>
-
 <tr>
-<td colspan="3"> </td>
+<td colspan="3"> 
+</td>
 </tr>
-
 <tr bgcolor="#FFCC00">
 <td colspan="3">
 <div align="center"><img src="images/yellowspacer.gif" width=
 "100%" height="2"></div>
 </td>
 </tr>
-
 <tr>
 <td colspan="3"> </td>
 </tr>
-
 <tr>
-<td colspan="3">
-<div align="center"><a class="bottommenu" href=
-"index.php">home</a> | <a href="about.htm" class=
-"bottommenu">about</a> | <a href="/reviews/index.htm" class=
-"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
-"bottommenu">screenshots</a> | <a href="downloads.htm" class=
-"bottommenu">download</a> | <a href="Authors.htm" class=
-"bottommenu">authors</a> | <a href="Thanks.htm" class=
-"bottommenu">thanks</a><br>
- <a href="setup/index.htm" class="bottommenu">setup</a> | <a
-href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
-<a href="http://sourceforge.net/mail/?group_id=7420" class=
-"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
-"bottommenu">faq</a> | <a href="developers.htm" class=
-"bottommenu">developers</a> | <a href="Links.htm" class=
-"bottommenu">links</a></div>
+<td>
+</td>
+<td align="center">
+<a href="index.php" class="bottommenu">home</a>&nbsp;|&nbsp;<a href="about.htm" 
+class="bottommenu">about</a>&nbsp;|&nbsp;<a href="docs.htm" 
+class="bottommenu">documentation</a>&nbsp;|&nbsp;<a href="downloads.htm" 
+class="bottommenu">DScaler&nbsp;4</a>&nbsp;|&nbsp;<a href="Authors.htm" 
+class="bottommenu">authors</a><br><a href="Thanks.htm" 
+class="bottommenu">thanks</a>&nbsp;|&nbsp;<a href="user_support.htm" 
+class="bottommenu">user&nbsp;support</a>&nbsp;|&nbsp;<a href="donate.htm" 
+class="bottommenu">donate</a>&nbsp;|&nbsp;<a href="developers.htm" 
+class="bottommenu">developers</a>&nbsp;|&nbsp;<a href="Links.htm" 
+class="bottommenu">links</a>
+</td>
+<td align="right">
+<p>
+<a href="http://sourceforge.net/donate/index.php?group_id=7420">
+ <img src="http://images.sourceforge.net/images/project-support.jpg" 
+ width="88" height="32" border="0" alt="Support This Project" /> 
+</a><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" />
+</a></p>
 </td>
 </tr>
 </table>
-
-<p><a href="http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
-"88" height="31" border="0" alt="SourceForge.net" align="right">
-</a></p>
-
-<p> </p>
-
 </body><!-- #EndTemplate -->
 
 </html>
