--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -132,13 +132,6 @@ height="2"></td>
       <h2>How much does DScaler cost ?</h2>
       <p>DScaler is free software, open-source, coded under the <a href=
 "http://www.fsf.org/licenses/gpl.html">GNU GPL Licence</a>.</p>
-      <h2>What do I do if I want to pay for it ?</h2>
-      <p>While the developers in no way oblige you to, we would suggest that you 
-        support <a href=http://www.eff.org/>Electronic Frontier Foundation</a> 
-        by making a contribution <a href=http://www.eff.org/support>here</a> 
-      <p>We can't promise anything in return except to try to give a small preference 
-        to support requests, but you'll have our appreciation and know you've 
-        helped keep cyberspace free of barbed wire and bull***t.</p>
       <h2>Can I ship DScaler with machines I make ?<br>
         Can I redistribute DScaler ?</h2>
       <p>DScaler is released under the <a href=
@@ -406,54 +399,49 @@ href="http://www.dscaler.org/downloads.htm">download page</a></p>
 "http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss"> mailing list</a>. 
         Some information to get you started is on the <a href="http://www.dscaler.org/developers.htm">developers 
         page</a>. 
-      <!-- #EndEditable --> 
-      <p></p>
+<!-- #EndEditable --> 
 </td>
 </tr>
-
 <tr>
-<td colspan="3"> </td>
+<td colspan="3"> 
+</td>
 </tr>
-
 <tr bgcolor="#FFCC00">
 <td colspan="3">
-<div align="center"><img src="/images/yellowspacer.gif" width=
+<div align="center"><img src="images/yellowspacer.gif" width=
 "100%" height="2"></div>
 </td>
 </tr>
-
 <tr>
 <td colspan="3"> </td>
 </tr>
-
 <tr>
-<td colspan="3">
-<div align="center"><a href="index.php" class=
-"bottommenu">home</a> | <a href="about.htm" class=
-"bottommenu">about</a> | <a href="/reviews/index.htm" class=
-"bottommenu">reviews</a> | <a href="screenshots/index.htm" class=
-"bottommenu">screenshots</a> | <a href="downloads.htm" class=
-"bottommenu">download</a> | <a href="Authors.htm" class=
-"bottommenu">authors</a> | <a href="Thanks.htm" class=
-"bottommenu">thanks</a><br>
- <a href="setup/index.htm" class="bottommenu">setup</a> | <a
-href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
-<a href="http://sourceforge.net/mail/?group_id=7420" class=
-"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
-"bottommenu">faq</a> | <a href="developers.htm" class=
-"bottommenu">developers</a> | <a href="Links.htm" class=
-"bottommenu">links</a></div>
+<td>
+</td>
+<td align="center">
+<a href="index.php" class="bottommenu">home</a>&nbsp;|&nbsp;<a href="about.htm" 
+class="bottommenu">about</a>&nbsp;|&nbsp;<a href="docs.htm" 
+class="bottommenu">documentation</a>&nbsp;|&nbsp;<a href="downloads.htm" 
+class="bottommenu">DScaler&nbsp;4</a>&nbsp;|&nbsp;<a href="Authors.htm" 
+class="bottommenu">authors</a><br><a href="Thanks.htm" 
+class="bottommenu">thanks</a>&nbsp;|&nbsp;<a href="user_support.htm" 
+class="bottommenu">user&nbsp;support</a>&nbsp;|&nbsp;<a href="donate.htm" 
+class="bottommenu">donate</a>&nbsp;|&nbsp;<a href="developers.htm" 
+class="bottommenu">developers</a>&nbsp;|&nbsp;<a href="Links.htm" 
+class="bottommenu">links</a>
+</td>
+<td align="right">
+<p>
+<a href="http://sourceforge.net/donate/index.php?group_id=7420">
+ <img src="http://images.sourceforge.net/images/project-support.jpg" 
+ width="88" height="32" border="0" alt="Support This Project" /> 
+</a><a href="http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
+"88" height="31" border="0" alt="SourceForge.net" />
+</a></p>
 </td>
 </tr>
 </table>
-
-<p><a href="http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=7420&type=1" border=
-"0" alt="SourceForge.net" align="right"></a></p>
-
-<p> </p>
-
 </body><!-- #EndTemplate -->
 
 </html>
-
