--- a/htdocs/contact.htm
+++ b/htdocs/contact.htm
@@ -1,12 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-<!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" -->
-<title>DirectShow Filter</title>
-<!-- #EndEditable -->
-<meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+<!-- #BeginEditable "doctitle" --> 
+<title>DScaler - Contact</title>
+<!-- #EndEditable --> 
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -22,54 +19,39 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 -->
 </style>
 </head>
+
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td height="1" width="160"><img src="images/spacer.gif" width="1"
-height="1"></td>
-<td height="1" width="342"><img src="images/spacer.gif" width="1"
-height="1"></td>
-<td height="1" width="501"><img src="images/spacer.gif" width="1"
-height="1"></td>
-</tr>
-
-<tr>
-<td width="160"><img src="images/dscalerlogo.jpg" alt=
-"DScaler logo"></td>
-<td colspan="2" align="right" valign="bottom"><font face=
-"Verdana, Arial, Helvetica, sans-serif" size="5"><b>
-<!-- #BeginEditable "Page%20Title" -->
-DirectShow Filter 
-<!-- #EndEditable --></b></font></td>
-</tr>
-
-<tr bgcolor="#FFCC00" align="right">
-<td colspan="3"><img src="images/yellowspacer.gif" width="100%"
-height="2"></td>
-</tr>
-
-<tr>
-<td colspan="3"> </td>
-</tr>
-
-<tr>
-<td colspan="3"><!-- #BeginEditable "Text" -->
-
-      <p>The DScaler team also is working on adding support for its algorithms 
-        as DirectShow filters. This project is still in it's early stages but 
-        we have made some progress.</p>
-      <p>Our most recent code (1.2.0 released 17th November 2001) is available 
-        for download:</p>
-<ul>
-<li><a href="http://prdownloads.sourceforge.net/deinterlace/Deinterlace120ax.zip">Filter</a></li>
-<li><a href="http://prdownloads.sourceforge.net/deinterlace/Deinterlace120src.zip">Source code</a></li>
-</ul>
-      <p>These files are not yet supported for end-users. Please refer all developer 
-        questions to the developer mailing list at this time.</p>
-      <p>If you wish to ship versions of these files with any commercial product, 
-        then please contact the developer mailing list for advice on how to make 
-        sure you are complying with the GNU General Public License.</p>
-
+  <tr> 
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
+  </tr>
+  <tr> 
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
+    <td colspan="2" align="right" valign="bottom">
+      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b>
+			<!-- #BeginEditable "Page%20Title" -->Contact<!-- #EndEditable -->
+			</b></font></td>
+  </tr>
+  <tr bgcolor="#FFCC00" align="right"> 
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
+  </tr>
+  <tr> 
+    <td colspan="3">&nbsp;</td>
+  </tr>
+  <tr>
+    <td colspan="3"><!-- #BeginEditable "Text" -->
+		<h2>User Support</h2>
+		<p>All support related queries, feature requests and so on are best handled by the 
+		<a href=user_support.htm>forums</a>. Please do not mail me or the developement list 
+		with general support queries.</p>
+		<h2>Developer Support</h2>
+		<p>Please see the <a href=developers.htm>developers page</a>.</p>
+		<h2>Other</h2>
+		<p>If your query does not fall into one of the above categories you can contact me
+		 directly via <i>john at adcock8 dot freeserve dot co dot uk</i>.  Please be aware that I
+		 delete mails that I feel should be directed elsewhere.</p>
 <!-- #EndEditable --> 
 </td>
 </tr>
