updated about about page

--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -112,7 +112,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 			with internal sources as well as external sources.  It is also planned to 
 			eliminate the need for direct hardware access.</p>
 			<p>At the moment the project is in active development but there are some usable 
-			filters being produced.  Get the latest versions of these filters 
+			filters being produced.  For more information go  
 			<a href="dscaler5.htm">here</a>.</p>
 			<a name="deinterlacing"></a>
 			<h2>DScaler Deinterlacing</h2>
