--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -23,8 +23,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </style>
 </head>
 <body bgcolor="#FFFFFF">
-<table width="100%" border="0" cellspacing="0" cellpadding="0"
-height="1818">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td height="5" width="160"><img src="images/spacer.gif" width="1"
 height="1"></td>
@@ -53,7 +52,7 @@ width="100%" height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3" height="1542"><!-- #BeginEditable "Text" -->
+<td colspan="3"><!-- #BeginEditable "Text" -->
 <p>Like many open source programs DScaler has a release schedule that can be somewhat
 confusing.  Below we will list the releases that have been passed though a
 test cycle on the main developer list.  A full list of all releases can be seen
