updated webiste based onmailing list comments

--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -96,6 +96,11 @@ developers&#151;for the original screen capture code.</li>
 <li>Jim Ferguson for his ground breaking YXY tool, the model and benchmark 
 for aspect ratio support.</li>
 
+<li>Gerd Knorr for the "v4l2/OSS device driver for saa7130/34" on which DScaler's saa713x
+support is based.  And for providing details on the saa7130/4 chip.</li>
+
+<li>Péter Gulyás for his contributions in saa7134 Nicam audio fixes.</li>
+
 <li>Erik Spr&aring;ng for the new DScaler logo.</li>
 
 <li>Phat Phreddy for the new DScaler domains.</li>
@@ -105,6 +110,14 @@ for aspect ratio support.</li>
 <li>John Isar for the Greek teletext code page.</li>
 
 <li>Eduardo José Tagle for the PAL-NC patch.</li>
+
+<li>Robin Zalek (aka Bob) for the new icon.</li>
+
+<li>Robert Schlabbach for several patches and eye for detail.</li>
+
+<li>Torsten Seeboth and Lavrenov Dmitrij for sorting out issues with CX2388x sound.</li>
+
+<li>Sven Grothklags for audio patches.</li>
 
 <li>Everybody on the deinterlace project mailing list.</li>
 </ul>
