--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -68,6 +68,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 			<p>We also have some screenshots which illustrate the issue 
 			<a href="screenshots/index.htm">here</a>.
 			
+			<h2>Who are the developers?</h2>
+			
+			<p>Lots of people have contributed to the project a list of the main 
+			developers can be found <a href="Authors.htm">here</a>.  We are also 
+			grateful to everybody who has submitted patches, bug reports or has helped 
+			out on the various forums, some of those poeple are thanked 
+			<a href="Thanks.htm">here</a>.</p> 
+			
 			<h2>What do others say about DScaler?</h2>
 
 			<p>We maintain a list of reviews and articles about DScaler 
