--- a/htdocs/docs.htm
+++ b/htdocs/docs.htm
@@ -48,6 +48,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 		<li><a href="setup/index.htm">Setup (out of date but basically correct)</a><br></li>
 		<li><a href="FAQ.htm">FAQ</a><br></li>
 		<li><a href="keyboard.htm">Keyboard Shortcuts</a><br></li>
+		<li><a href="Authors.htm">Authors</a><br></li>
+		<li><a href="Thanks.htm">Thanks</a><br></li>
 		</ul>
 		<p>As is common with open source project our documentation is often not very good 
 		and is often out of date, if you would like to help us rectify this please 
