--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -60,7 +60,15 @@ test cycle on the main developer list.  A full list of all releases can be seen
 For most users we recommend installing whatever version is at the top of this list.  
 If you have serious problems with it then revert back to the last release marked as stable.</p>
    
-<p>Version 4.1.8&#151;<b>Beta</b>&#151;[<a href=
+<p>Version 4.1.11&#151;<b>Beta</b>&#151;[<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler4111.exe">Setup Program</a>] [<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler4111src.zip">Source Zipped</a>]</p>
+<ul>
+<li>Some cx2388x sound fixes</li> 
+<li>Fixes some XP2 issues with bt8x8</li> 
+</ul>
+
+<p>Version 4.1.8&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/DScaler418.exe">Setup Program</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/DScaler418src.zip">Source Zipped</a>]</p>
 <ul>
