--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -89,7 +89,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 				provide PC owners with image quality matched only by very expensive
 				equipment.</p>
 			<p>In order to get the most out of DScaler 4 you will need a 
-			<a href="href=card-support/index.htm">supported capture card</a>.</p>
+			<a href="card-support/index.htm">supported capture card</a>.</p>
       <p>DScaler performs a variety of functions:
       <ul>
         <li>Grabbing video from a DVD player, game console, laserdisc, or VCR 
