Added thanks to "e-nek" for testing and debugging of SAA7133/5 code.

--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -121,6 +121,8 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 
 <li>Sven Grothklags for audio patches.</li>
 
+<li>"e-nek" for the major help in testing and debugging of SAA7133/5 support.</li>
+
 <li>Everybody on the deinterlace project mailing list.</li>
 </ul>
 
